# ImageProc2

./: .gitignore  CImg.h  CMakeLists.txt  FreqFilters.cpp  FreqFilters.h  LLFilter.cpp  LLFilter.h  MorphologicalM4.cpp  MorphologicalM4.h  TransFourier.cpp  TransFourier.h  funtions.cpp  funtions.h  histogram.cpp  histogram.h  lowpass_filter.cpp  lowpass_filter.h  main  main.cpp  main.cpp.orig  morphology.cpp  morphology.h  perf.cpp  perf.h  regionGrowth.cpp  regionGrowth.h  reyleigh.cpp  reyleigh.h  similarity.cpp  similarity.h
